1998-05-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/killpgrp.c (main): wait for either SIGTERM or EOF on
	stdin.

	* client-src/sendsize.c (getsize_dump): close the other end of
 	killpgrp's stdin pipe before trying to kill it, because we just
 	can't kill it.

	* configure.in (HAVE_HPUX_SCSI): check whether sys/scsi.h actually
	supports HP/UX-like changer commands.

	* config/acconfig.h (HAVE_HPUX_SCSI): indicates HP/UX-like changer
	interface is supported.

	* changer-src/scsi-hpux.c: check for HAVE_HPUX_SCSI instead of
 	HAVE_SYS_SCSI_H.

1998-05-25  Allen Briggs  <briggs@canolog.ninthwonder.com>

	* changer-src/chg-manual.sh.in (ONLINEREGEX): add `^er=0$' for
	NetBSD's mt

1998-05-23  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/sendsize.c (getsize_dump): killpgrp must be direct
 	child of sendsize, otherwise sendsize won't be able to kill it.

1998-05-23  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in (bcopy, bzero, fread, fwrite, vfprintf, vprintf,
	vsprintf): check for these in stdlib.h
	(memmove): check for it in strings.h
	
	* common-src/amanda.h (memmove): fix declaration of memmove, so as
 	to be compatible with the ones in common-src/memmove.c and
 	regex-src/fake/memmove.c
	
	reported by Tim Potter <tpot@acsys.anu.edu.au>

1998-05-20  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/sendbackup.c (check_status): when checking whether dump 
	returned 1, make sure it was not tar; #ifdef'ed out the code that
	ignores exit status 2 from gnutar (will be compiled in only if
	IGNORE_TAR_ERRORS is defined)
	* client-src/sendbackup-gnutar.c (GNUTAR active filesystem errors): 
	updated comment; compile in GNUTAR error messages as DMP_NORMAL if
	IGNORE_TAR_ERRORS is defined; compile in SMBCLIENT error messages as 
	DMP_NORMAL if IGNORE_SMBCLIENT_ERRORS is defined.
	
1998-05-20  Tom Lear  <toml@accesscom.com>

	* client-src/sendbackup.h (tarpid): new variable, used to check
	whether it is gnutar that is running